[EPMCDLAB-864]: prevent extra vertical scrollbar; vertical centering of all dialogs

--- a/services/self-service/src/main/resources/webapp/src/styles.css
+++ b/services/self-service/src/main/resources/webapp/src/styles.css
@@ -134,6 +134,7 @@ body {
   font-size: 16px;
   overflow-x: hidden;
   font-weight: 300;
+  display: flex;
 }
 
 button {
